<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.tomdong.sanity.MainActivity">

    <TextView
        android:id="@+id/ForgetTextView"
        android:layout_width="232dp"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Forget your password?Click Here"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/PwT"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="286dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="Register"
        android:alpha="0.50"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        app:layout_constraintHorizontal_bias="0.481" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="285dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"

        android:alpha="0.50"
        android:backgroundTint="@color/colorAccent"
        android:elevation="0dp"
        android:text="Login"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <ImageView
        android:id="@+id/SanityImage"
        android:layout_width="132dp"
        android:layout_height="184dp"
        app:srcCompat="@drawable/imageedit_3_3406903207"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.872" />

    <EditText
        android:id="@+id/UserT"
        android:layout_width="281dp"
        android:layout_height="46dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:drawableLeft="@drawable/accountcircle"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/PwT"
        android:layout_width="281dp"
        android:layout_height="52dp"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:drawableLeft="@drawable/lockopen"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/UserT"
        app:layout_constraintVertical_bias="0.028" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="346dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        app:layout_constraintGuide_begin="252dp"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        app:layout_constraintGuide_begin="491dp"
        android:orientation="horizontal" />

</android.support.constraint.ConstraintLayout>
