<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_bgt_date"
        android:layout_width="203dp"
        android:layout_height="49dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="yyyy/mm/dd"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_bgt_period"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:text="Period"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.339"
        android:layout_marginLeft="16dp"
        android:textSize="25dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="60dp"
        android:layout_height="39dp"
        android:text="Days"
        android:layout_marginBottom="259dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        android:layout_marginRight="36dp"
        android:textSize="25dp"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="31dp" />

    <EditText
        android:id="@+id/trans_to_button"
        android:layout_width="120dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="Budget Name"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_bgt_period"
        android:layout_width="127dp"
        android:layout_height="41dp"
        android:layout_marginBottom="257dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="8dp"
        android:hint="0-31"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintLeft_toRightOf="@+id/textView10"
        app:layout_constraintRight_toLeftOf="@+id/textView11" />

    <Button
        android:id="@+id/edit_bgt_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Due Date"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edit_bgt_date"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/trans_to_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        app:layout_constraintGuide_begin="436dp"
        android:orientation="horizontal" />

    <EditText
        android:id="@+id/edit_catgory_name"
        android:layout_width="102dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Select a category"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.548" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/budget_edit_catgoryList"
        android:layout_width="359dp"
        android:layout_height="244dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="-15dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="173dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/budget_edit_catamount"
        android:layout_width="95dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Amount"
        android:inputType="textPersonName|number"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

</android.support.constraint.ConstraintLayout>
